--- a/test/fixtures/weekly_tunes.yml
+++ b/test/fixtures/weekly_tunes.yml
@@ -1,11 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+one:
+  title: MyString
+  genre: MyString
+  artist: MyString
+  date_from: 2013-03-20
+  date_to: 2013-03-20
+  description: MyText
+
+two:
+  title: MyString
+  genre: MyString
+  artist: MyString
+  date_from: 2013-03-20
+  date_to: 2013-03-20
+  description: MyText
